--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: career-copilot-ai
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run streamlit_app.py
+    buildCommand: pip install --upgrade pip==23.3.1 && pip install -r requirements.txt
+    startCommand: streamlit run streamlit_app.py --server.port=$PORT --server.enableCORS=false
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.13
