--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+# Build tools
 setuptools>=65.5.0
 wheel>=0.38.4
 
+# Streamlit + Core
 streamlit==1.34.0
 pandas==1.5.3
 numpy==1.24.4
 matplotlib==3.8.4
+
+# NLP & Resume Features
 scikit-learn==1.2.2
 nltk==3.8.1
 PyPDF2==3.0.1
@@ -12,6 +16,14 @@ pdfplumber==0.10.3
 python-docx==1.1.0
 deep-translator==1.11.4
 openpyxl==3.1.2
-spacy==3.7.4
-pymupdf==1.23.7
+
+# HuggingFace + Torch (Lightweight, optional)
+transformers==4.38.2
+torch==2.2.2
+
+# Lightweight alternatives
+spacy==3.7.2
+pymupdf==1.23.5
+
+# Pip itself
 pip==23.3.1
