--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,8 @@
+# .streamlit/config.toml
+
 [server]
 headless = true
+port = $PORT
 enableCORS = false
 enableXsrfProtection = false
+address = "0.0.0.0"
